test/tests/compiler/8_loops/invalid_parse/plx1_infinite_loop_2.plx
pub fn main(none) i32 {
    loop i: i32;;
    return 0
}
